--- a/index.html
+++ b/index.html
@@ -139,14 +139,19 @@
           <h2>Find your next adventure - search with City Wonderer now!</h2>
         </div>
         <form id="search-city" class="search-wrapper">
+          <img class="half-circle" src="./assets/images/half-l.png" />
           <div id="poi-categories-wrapper" class="dropdown categories-dropdown">
             <button
               class="dropdown-toggle categories-dropdown-button"
-              type="button"
-              data-toggle="dropdown"
+              role="button"
+              data-bs-toggle="dropdown"
               aria-expanded="false"
             >
               Categories
+              <img
+                class="dropdown-arrow"
+                src="./assets/images/arrow-down-3101.svg"
+              />
             </button>
             <div class="dropdown-menu">
               <button
@@ -203,71 +208,169 @@
             autofocus
           />
           <!-- the submit button -->
-          <button type="submit" id="search-btn" class="search-btn row">
-            <img src="./assets/images/search-7525.svg" class="magnifying-glass-icon"/>
+          <button
+            type="submit"
+            id="search-btn"
+            class="search-btn row"
+            data-bs-toggle="modal"
+            data-bs-target="#resultsMap"
+          >
+            <img
+              src="./assets/images/search-7525.svg"
+              class="magnifying-glass-icon"
+            />
           </button>
+          <img class="half-circle" src="./assets/images/half-r.png" />
         </form>
-      </div>
-
-      <!-- The section where the api information recieved through js will be populated -->
-      <div id="container-2" class="container-2">
-        <!-- Press button above and get results-->
-        <div id="results-section" class="col1 d-none">
-          <div id="map"></div>
-          <div id="five-day" class="weathersection mt-3"></div>
-          <div class="aside"></div>
-        </div>
       </div>
     </section>
 
     <!-- section for city news (and our partners) -->
-    <div id="categoryGrid">
-      <div id="City1" class="categoryGridArea">
-        <a
-          class="heading"
-          target="#"
-          href="https://www.thetravel.com/london-bridges-views-city/"
-          >THE 10 BEST London Bridges</a
-        >
+    <section id="top-cities" class="top-cities">
+      <h1>Discover Top Cities</h1>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card">
+            <img
+              src="./assets/images/tower-bridge-6273431_1920.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">London</h5>
+              <img src="/assets/images/right-arrow.svg" />
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="./assets/images/madrid.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Madrid</h5>
+              <img src="/assets/images/right-arrow.svg" />
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="/assets/images/amsterdam.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Amsterdam</h5>
+              <img src="/assets/images/right-arrow.svg" />
+            </div>
+          </div>
+        </div>
       </div>
-      <div id="City2" class="categoryGridArea">
-        <a
-          class="heading"
-          target="#"
-          href="https://www.organizotuviaje.com/espana/madrid-en-3-dias/"
-          >¿Qué ver en Madrid en tres días?</a
-        >
+    </section>
+
+    <section id="top-articles" class="top-articles">
+      <h1>Discover Top Festivals</h1>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card">
+            <img
+              src="./assets/images/day-of-the-dead.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Day Of The Dead</h5>
+              <img src="/assets/images/right-arrow.svg" />
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="./assets/images/oktoberfest.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Oktoberfest</h5>
+              <img src="/assets/images/right-arrow.svg" />
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="/assets/images/venice-carnival.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Venice Canival</h5>
+              <img src="/assets/images/right-arrow.svg" />
+            </div>
+          </div>
+        </div>
       </div>
-      <div id="City3" class="categoryGridArea">
-        <a
-          class="heading"
-          target="#"
-          href="https://www.tui.co.uk/destinations/europe/france/paris/holidays-paris.html"
-          >Paris City Break</a
-        >
-      </div>
-      <div id="City4" class="categoryGridArea">
-        <a
-          class="heading"
-          target="#"
-          href="https://thetourguy.com/travel-blog/netherlands/amsterdam/top-things-to-do-in-amsterdam-this-year"
-          >Amsterdam, The Netherlands 2023: Best Places to Visit</a
-        >
-      </div>
-      <div id="City5" class="categoryGridArea">
-        <a
-          class="heading"
-          target="#"
-          href="https://www.thomascook.com/holidays/city-breaks/berlin"
-          >Berlin</a
-        >
-      </div>
-    </div>
+    </section>
+
+    
+
+
+
+    
 
     <!-- Footer -->
     <footer>
       <p>created by Group 4 &copy;2023</p>
     </footer>
+
+    <!-- Map modal -->
+    <div
+      class="modal fade"
+      id="resultsMap"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div
+        class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl"
+      >
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <!-- The section where the api information recieved through js will be populated -->
+            <div id="container-2" class="container-2">
+              <!-- Press button above and get results-->
+              <div id="results-section" class="col1 d-none">
+                <div id="map"></div>
+                <div id="five-day" class="weathersection mt-3"></div>
+                <div class="aside"></div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Moment.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
